<resources>
    <string name="app_name">2015 Tour Of Homes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- String transparencies -->
    <string name="primary_text_alpha_dark">.87</string>
    <string name="secondary_text_alpha_dark">.54</string>

    <!--Navigation Drawer -->
    <string name="nav_home">Home</string>
    <string name="nav_featured_homes">Featured Homes</string>
    <string name="nav_map">Map</string>
    <string name="nav_tickets">Tickets</string>
    <string name="nav_contact">Contacts</string>
    <string name="nav_title">O4W Tour of Homes</string>

    <!-- Toolbar Menus -->
    <string name="action_settings">Settings</string>

    <!-- Main Layout -->
    <string name="main_about_desc">Enjoy the unique charms of the historic Old Fourth Ward this Fall on September 11th from 12pm-5pm. Our annual home tour features a wide variety of incredible living spaces including stunning lofts, classic, and contemporary designs. Whether modernists or traditionalists- you’ll be inspired to start some new decoration projects in your own home. Tour proceeds will benefit Old Fourth Ward neighborhood organizations along with the beautification projects along the Boulevard corridor. We can’t wait to see you on the tour this September 11th!</string>
    <string name="main_ticket_pickup_desc">On the day of the tour, please come to Historic Old Fourth Ward Park to pick up your tickets. We’ll have a registration booth set up in the green space just off Rankin Street overlooking the large water feature.</string>
    <string name="sponsors">Sponsors</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_about_the_tour">About the Tour</string>
    <string name="main_ticket_location">Ticket Pickup Location</string>

    <!-- Homes Map -->
    <string name="marker_buy_tickets">Buy Tickets</string>

    <!-- Error Messages -->
    <string name="no_network_map">No Network Connection Available. Maps will be disabled.</string>
    <string name="title_activity_home_detail">HomeDetailActivity</string>


    <!-- Transitions/Annimations -->
    <string name="trans_home_image">trans_home_image</string>

    <!-- Home Detail Layout -->
    <string name="detail_header_owner">OWNER:</string>
    <string name="detail_header_home_type">HOME TYPE:</string>
    <string name="detail_header_year_built">YEAR BUILT:</string>
    <string name="detail_header_section">SECTION:</string>
    <string name="detail_header_description">DESCRIPTION:</string>

    <!-- Tickets -->
    <string name="tickets_not_available">No Tickets Available</string>
    <string name="tickets_available">Tickets Available at the Link Below!</string>
    <string name="tickets_notified">You will be notified as soon as they become available!</string>

    <!-- Sponsors -->
    <string name="sponsors_ladybird">Ladybird Grove &amp; Mess Hall</string>
    <string name="sponsors_highland_bakery">Highland Bakery</string>
    <string name="sponsors_fourth_ward_park">Historic Fourth Ward Park Conservancy</string>
    <string name="sponsors_nonis">Noni\'s Bar and Deli</string>
    <string name="sponsors_nandina">Nandina Home &amp; Design</string>
    <string name="sponsors_village_theatre">Village Theatre</string>
    <string name="sponsors_wingate">Wingate Management</string>

    <string name="sponsors_ladybird_info">Hip New American bar &amp; restaurant offering a campfire-&amp;-lodge theme, screened porches &amp; local beers.</string>

    <!-- Error Strings -->
    <string name="google_play_service_out_of_date_error">Google Play Services is out of date on this device. Can not get location. Please upgrade Google Play Services</string>
    <string name="google_play_service_connection_failed">Connection to Google Play Services Failed</string>

    <!-- Shared Preferences -->
    <string name="pref_tickets_available_key" translatable="false">ticket_available_key</string>
    <string name="pref_tickets_available_default" translatable="false">false</string>

    <!-- No Network Screen -->
    <string name="no_network">No Network Connection Available. Please check network settings.</string>
    <string name="retry">Retry</string>
</resources>
