<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_featured_homes"
            android:icon="@drawable/ic_view_module_homes"
            android:title="@string/nav_featured_homes" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/two_tickets_icon"
            android:title="@string/nav_tickets" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_sponsors"
                android:icon="@drawable/ic_sponsors"
                android:title="@string/sponsors"/>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contacts_icon"
                android:title="@string/nav_contact"/>
            <!--
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
                -->
        </menu>
    </item>

</menu>
